@@ -6,6 +6,9 @@ import java.nio.file.Path;
 import java.nio.file.Files;
 import java.io.InputStream;
 import java.nio.file.FileSystemNotFoundException;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.List;
 import java.util.Locale;
 
 /**
@@ -16,16 +19,20 @@ import java.util.Locale;
  *
  * @author Riven
  */
-public class Track {
+public final class Track {
 
     private final static String WINDOWS_DEFAULT_MEDIA_PATH = "C:\\Users\\Public\\Music\\";
     private final static String NIX_DEFAULT_MEDIA_PATH = "/media/music/";
 
     private final Path filepath;
     private final String title;
+    private final String artist;
+    private final String genre;
+    private final String album;
     private final int bitrate;
     private final String streamType;
     private final String duration;
+    private final int frames;
 
     /**
      * Create a Track object with info from the DB and file metadata
@@ -43,23 +50,55 @@ public class Track {
      */
     public Track(String mediaDir, String filename) throws NonFatalException, FatalException {
         if (mediaDir != null && !mediaDir.equals("") && filename != null && !filename.equals("")) {
-            filepath = FileSystems.getDefault().getPath(mediaDir, filename);
+            filepath = FileSystems.getDefault().getPath(mediaDir, filename).toAbsolutePath();
             ///TODO: Handle file according to filetype
         } else if (mediaDir == null || mediaDir.equals("")) {
-            filepath = FileSystems.getDefault().getPath(getOSPath(), filename);
+            filepath = FileSystems.getDefault().getPath(getOSPath(), filename).toAbsolutePath();
         } else {
             //Empty string or null, not even a single character...
             throw new NonFatalException("No (valid) filename was given, like 'song.ext'\r\n\tInstead " + filename + " was given.", new java.nio.file.FileSystemException(mediaDir + filename), false, true);
         }
+        if (!Files.exists(filepath)) {
+            throw new NonFatalException("An incorrect filename or -path was given, like '" + getOSPath() + "song.ext'\r\n\tInstead " + filepath.toString() + " was given.", new java.nio.file.FileSystemException(mediaDir + filename), false, true);
+        }
         streamType = checkFiletype();
         try {
-            title = ffprobe("-show-entries stream_tags=title");
-            bitrate = Integer.parseInt(ffprobe("-show-entries stream=bit_rate"));
-            duration = "-show-entries stream=duration";
+            title = ffprobe("-show_entries format_tags=title").trim();
+            bitrate = Integer.parseInt(ffprobe("-show_entries format=bit_rate").trim());
+            duration = ffprobe("-show_entries format=duration").trim();
+            frames = Integer.parseInt(ffprobe("-count_frames -select_streams a:0 -show_entries stream=nb_read_frames").trim());
+            genre = ffprobe("-show_entries format_tags=genre").trim();
+            String alb = ffprobe("-show_entries format_tags=album").trim();
+            if(alb.contentEquals("")) {
+                album = "Album was not defined in the metadata";
+            } else {
+                album = alb;
+            }
+            String art = ffprobe("-show_entries format_tags=artist").trim();
+            if(art.contentEquals("")) {
+                artist = ffprobe("-show_entries format_tags=album_artist").trim();
+            } else {
+                artist = art;
+            }
         } catch (IOException io) {
             throw new NonFatalException("The file could not be read and/or processed and an exception was thrown.", io);
         }
+    }
 
+    /**
+     * Create a Track object with info from the DB and file metadata.
+     * This constructor uses the default paths availlable through getOSPath();
+     * 
+     * @param filename The filename of the Track, this should come from the DB
+     * @throws NonFatalException Something went wrong, but we can recover. Pass
+     * this to the ErrorLogger and move on.
+     * @throws FatalException Originates in getOSPath(), OS cannot be determined
+     * and thus any OS specific things like separators and paths aren't
+     * reliable. Pass this to the ErrorLogger and EXIT with a non-zero exit
+     * code!
+     */
+    public Track(String filename) throws NonFatalException, FatalException {
+        this("", filename);
     }
 
     /**
@@ -87,58 +126,66 @@ public class Track {
     }
 
     /**
-     * Checks the filetype as returned by FFProbe, a tool in the FFMpeg suite.
-     * If file access is denied, a NonFatalException is thrown. Keep in mind
-     * that any class that depends on Track objects MUST check if any Tracks
-     * could be instantiated, or throw a FatalException, log and exit.
+     * Checks the MIMEtype specified on the file to determine if it's audio.
+     * Then checks the filetype as returned by FFProbe, a tool in the FFMpeg
+     * suite. If file access is denied, a NonFatalException is thrown. Keep in
+     * mind that any class that depends on Track objects MUST check if any
+     * Tracks could be instantiated, or throw a FatalException, log and exit.
      *
      * @param path the FILEPATH of the file to check.
      * @return the filetype typically associated with this file.
      */
-    private String checkFiletype() throws NonFatalException {
+    private String checkFiletype() throws NonFatalException, FatalException {
         try {
             //Check the MIME Type first, to prevent unnecessary work
-            String MIMEtype = Files.probeContentType(filepath).toLowerCase(Locale.ENGLISH);
+            String MIMEtype = Files.probeContentType(filepath).toLowerCase();
             if (!MIMEtype.contains("audio/")) {
                 //Not an audio MIME Type
                 throw new NonFatalException("This was not an audio file!", new Exception());
             }
-            return ffprobe("-select_streams a:0 -show_entries stream=codec_name");
+            return ffprobe("-select_streams a:0 -show_entries stream=codec_name").trim();
         } catch (IOException ex) {
             throw new NonFatalException("File could not be read! Skipping this track!", ex);
         }
     }
 
     /**
-     * Call onto FFProbe to check something about this track.
-     * This function was built with the idea that only a single property is
-     * requested. If multiple properties are requested, this must be handled by
-     * the implementing or extending method.
-     * Headers, Footers, Wrappers and Keys for values are NOT PRINTED.
-     * 
+     * Call onto FFProbe to check something about this track. This function was
+     * built with the idea that only a single property is requested. If multiple
+     * properties are requested, this must be handled by the implementing or
+     * extending method. Headers, Footers, Wrappers and Keys for values are NOT
+     * PRINTED.
+     *
      * @param command The internals for the command to execute
      * @return The information returned by FFProbe as queried in COMMAND
      * @throws IOException Propagated from Runtime.Exec(String command)
      */
-    public String ffprobe(String command) throws IOException {
+    public String ffprobe(String command) throws IOException, FatalException {
         //Set up the ffprobe command to check the stream type
-        StringBuilder s = new StringBuilder();
-        s.append("ffprobe -v error ");
-        s.append(command);
-        s.append(" -of default=noprint_wrappers=1:nokey=1 -i ");
-        s.append(filepath.toAbsolutePath().toString());
-        int extChar;
-        InputStream ffprobe = Runtime.getRuntime().exec(s.toString()).getInputStream();
-        StringBuilder ext = new StringBuilder();
-        while ((extChar = ffprobe.read()) != -1) {
-            ext.append((char) extChar);
+        List<String> cmdParts = new ArrayList<>();
+        cmdParts.add("ffprobe");
+        cmdParts.add("-v");
+        cmdParts.add("error");
+        cmdParts.addAll(Arrays.asList(command.split(" ")));
+        cmdParts.add("-of");
+        cmdParts.add("default=noprint_wrappers=1:nokey=1");
+        cmdParts.add("-i");
+        cmdParts.add(filepath.toAbsolutePath().toString());
+        ProcessBuilder proc = new ProcessBuilder(cmdParts);
+        Process cmd = proc.start();
+        StringBuilder out;
+        InputStream ffprobe = cmd.getInputStream();
+        out = new StringBuilder();
+        int outChar;
+        while ((outChar = ffprobe.read()) != -1) {
+            out.append((char) outChar);
         }
-        ffprobe.close();
-        return ext.toString();
+        return out.toString();
     }
 
     /**
      * Get the title for this Track as specified in its metadata.
+     *
      * @return The String title for this Track
      */
     public String getTitle() {
@@ -147,6 +194,7 @@ public class Track {
 
     /**
      * Get the bitrate for this Track as specified in its metadata.
+     *
      * @return The Integer bitrate for this Track
      */
     public int getBitrate() {
@@ -154,15 +202,18 @@ public class Track {
     }
 
     /**
-     * Get the Stream Type / encoding for this Track as specified in its metadata.
+     * Get the Stream Type / encoding for this Track as specified in its
+     * metadata.
+     *
      * @return The String Stream Type for this Track
      */
     public String getStreamType() {
         return this.streamType;
     }
-    
+
     /**
      * Get the duration for this Track as probed by FFProbe.
+     *
      * @return the String Duration for this Track.
      */
     public String getDuration() {
@@ -171,6 +222,7 @@ public class Track {
 
     /**
      * Get the FILEPATH for this Track as specified during instantiation.
+     *
      * @return The Path filepath for this Track
      */
     public Path getPath() {
@@ -178,8 +230,46 @@ public class Track {
     }
 
     /**
+     * Get the amount of mpeg frames in this track
+     * @return the counted amount of frames
+     */
+    public int getFrameCount() {
+        return this.frames;
+    }
+    
+    /**
+     * Get the artist or album artist for this Track as specified in its metadata.
+     *
+     * @return The String artist for this Track
+     */
+    public String getArtist() {
+        return this.artist;
+    }
+    
+    /**
+     * Get the genre for this Track as specified in its metadata.
+     * 
+     * @return the String genre for this Track
+     */
+    public String getGenre() {
+        return this.genre;
+    }
+    
+    /**
+     * Get the album for this Track as specified in its metadata, or a String
+     * stating it wasn't defined.
+     * 
+     * @return the String album for this Track
+     */
+    public String getAlbum() {
+        return this.album;
+    }
+
+    /**
      * Get the default Media path for music for this OS.
+     *
      * @return The default Media path for this OS
+     * @throws com.PiJukeboxPlayer.FatalException propagated from getOSPath();
      */
     public static String getDefaultMediaPath() throws FatalException {
         return getOSPath();
